# runner-coros-engagment

./: .env.example  .gitignore  CONTEXT.md  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  dashboard.py  db.py  deps.py  effort.py  filters.py  goal.py  main.py  privacy.py  store.py  trackpoint.py
backend/app/api/: dashboard.py  export.py  runs.py  settings.py  sync.py
backend/app/ingest/: derive.py  fetcher.py  parser.py  service.py
backend/tests/: conftest.py  test_api.py  test_dashboard.py  test_derive.py  test_effort.py  test_filters.py  test_goal.py  test_parser.py  test_privacy.py  test_store.py
docs/: PLAN.md
docs/adr/: 0001-fit-files-on-disk-as-ingestion-contract.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  DashboardView.tsx  FilterPanel.tsx  GoalCard.tsx  MapView.tsx  SettingsPanel.tsx  SyncPanel.tsx  api.ts  layers.test.ts  layers.ts  parseZones.test.ts  recording.ts  timeline.test.ts  timeline.ts  trackpoint.ts  types.ts  useFilters.test.ts  useFilters.ts  usePlayback.ts  useRecorder.ts  useTimelapse.ts  zones.test.ts  zones.ts
frontend/src/charts/: CumulativeMileage.tsx  Mileage.tsx  PaceTrend.tsx  WeeklyMileage.tsx  common.test.ts  common.ts
